[package]
name = "ingredients_bot"
version = "0.1.0"
authors = ["Benjamin Congdon <bencongdon96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
rusqlite = "0.20.0"
titlecase = "0.9"
tokio = "0.1.22"
libsqlite3-sys = { version = "*", features = ["bundled"] }
simple-server = "0.4.0"

[lib]
name = "ingredients_bot"
path = "src/lib.rs"

[[bin]]
name = "ingredients_bot"
path = "src/cli.rs"

[[bin]]
name = "ingredients_bot_server"
path = "src/server.rs"
