[package]
name = "ingredients_bot"
version = "0.1.0"
authors = ["Benjamin Congdon <bencongdon96@gmail.com>"]
edition = "2018"
default-run = "ingredients_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.13"
rusqlite = "0.20.0"
titlecase = "0.9"
tokio = "0.1.22"
simple-server = "0.4.0"
phf = { version = "0.8", features = ["macros"] }
indexmap = "1.3.0"

[lib]
name = "ingredients_bot"
path = "src/lib.rs"

[[bin]]
name = "ingredients_bot"
path = "src/cli.rs"

[[bin]]
name = "ingredients_bot_server"
path = "src/server.rs"
